--- a/Tasks/gradle/libs.versions.toml
+++ b/Tasks/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ activity = "1.9.0"
 constraintlayout = "2.1.4"
 lifecycle = "2.3.1"
 room = "2.6.1"
+recyclerview = "1.2.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -26,6 +27,7 @@ androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-lived
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
